--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
 # Compiled class file
 *.class
 
+# target
+target\classes
+target\generated-sources
+target\generated-test-sources
+target\maven-archiver
+target\maven-status
+target\surefire-reports
+target\test-classes
+
+#idea
+.idea
+
 # Log file
 *.log
 
